# react-native-sherpa-onnx-stt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODEL_SETUP.md  README.md  SherpaOnnxStt.podspec  package.json  tsconfig.build.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: android.yml  build-sherpa-onnx-framework.yml  ci.yml  ios.yml  release.yml
android/: build.gradle  gradle.properties
android/src/main/cpp/: CMakeLists.txt
android/src/main/cpp/jni/: sherpa-onnx-stt-jni.cpp  sherpa-onnx-wrapper.cpp  sherpa-onnx-wrapper.h
android/src/main/java/com/sherpaonnxstt/: SherpaOnnxSttModule.kt  SherpaOnnxSttPackage.kt
docs/images/: .gitkeep
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/assets/models/sherpa-onnx-funasr-nano-int8/: README.md
example/android/app/src/main/assets/models/sherpa-onnx-nemo-parakeet-tdt-ctc-en/: README.md
example/android/app/src/main/assets/models/sherpa-onnx-paraformer-zh-small/: README.md
example/android/app/src/main/assets/models/sherpa-onnx-sense-voice-zh-en-ja-ko-yue-int8/: README.md
example/android/app/src/main/assets/models/sherpa-onnx-wenetspeech-ctc-zh-en-cantonese/: README.md
example/android/app/src/main/assets/models/sherpa-onnx-whisper-tiny-en/: README.md
example/android/app/src/main/assets/models/sherpa-onnx-zipformer-small-en/: README.md
example/android/app/src/main/java/com/sherpaonnxstt.example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/SherpaOnnxSttExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/SherpaOnnxSttExample.xcodeproj/: project.pbxproj
example/ios/SherpaOnnxSttExample.xcodeproj/xcshareddata/xcschemes/: SherpaOnnxSttExample.xcscheme
example/src/: App.tsx  audioConfig.ts  modelConfig.ts
ios/: SherpaOnnxStt.h  SherpaOnnxStt.mm  SherpaOnnxStt.xcconfig  sherpa-onnx-wrapper.cpp  sherpa-onnx-wrapper.h
ios/Frameworks/: .gitkeep
ios/Frameworks/sherpa_onnx.xcframework/: VERSION.txt
src/: NativeSherpaOnnxStt.ts  index.tsx  types.ts  utils.ts
